# page-craft

./: .gitignore  Cargo.toml  README.md
actix-backend/: Cargo.toml
actix-backend-conduit/src/: main.rs
actix-backend-graphql/: Cargo.toml  README.md
actix-backend-graphql/src/: main.rs
actix-backend-graphql/src/app/: mod.rs  mutation.rs  profiles.rs  query.rs  tags.rs  users.rs
actix-backend-graphql/src/app/articles/: comments.rs  mod.rs
actix-backend-graphql/src/blog/: mod.rs  model.rs
actix-backend-graphql/src/starwars/: mod.rs  model.rs
actix-backend-graphql/src/utils/: auth.rs  custom_type.rs
actix-backend/src/app/: mod.rs
actix-backend/src/app/articles/: mod.rs
actix-web-realworld-example-backend/: Cargo.toml
actix-web-realworld-example-backend/src/: email_service.rs  lib.rs  main.rs  models.rs  models_bk.rs  prelude.rs  routes.rs
actix-web-realworld-example-backend/src/api/: invitation_controller.rs
actix-web-realworld-example-backend/src/db/: mod.rs  profiles.rs  users.rs
actix-web-realworld-example-backend/src/handlers/: auth.rs  auth_handler.rs  invitation.rs  invitation_handler.rs  mod.rs  ping_handler.rs  profiles.rs  register.rs  register_handler.rs  users.rs
actix-web-realworld-example-backend/src/models/: user.rs
libs/authentication/: Cargo.toml
libs/authentication/src/: lib.rs
libs/authentication/src/auth/: middleware.rs  mod.rs
libs/authentication/src/db/: mod.rs
libs/authentication/src/errors/: mod.rs
libs/utils/: Cargo.toml
libs/utils/src/: lib.rs  pagination.rs
libs/utils/src/utils/: mod.rs
migrations/2022-03-08-030651_users/: up.sql
migrations/2022-03-08-030822_invitations/: up.sql
src/: config.rs  email_service.rs  main.rs  schema.rs
src/api/: account_controller.rs  invitation_controller.rs  mod.rs  ping_controller.rs
svelte-frontend-conduit/: package.json
svelte-frontend-conduit/src/lib/: api.js
svelte-frontend-conduit/src/routes/: Nav.svelte
svelte-frontend-conduit/src/routes/article/[slug]/: ArticleMeta.svelte
svelte-frontend-conduit/src/routes/editor/: Editor.svelte
svelte-frontend-conduit/src/routes/settings/: +page.server.js  +page.svelte
svelte-frontend/src/lib/: api.js
svelte-frontend/src/routes/profile/@[user]/: +layout.svelte  +page.server.js
yew-frontend-blog/: Cargo.toml  index.html
yew-frontend-blog/src/: main.rs
yew-frontend-blog/src/pages/: home.rs
yew-frontend-craft/: Cargo.toml
