[package]
name = "actix-web-realworld-example-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
lib-utils = { path = "../libs/utils" }
lib-authentication = { path = "../libs/authentication" }

actix-rt = "2.7.0"
actix-cors = "0.6.1"
actix-web-httpauth = "0.8.0"
actix-service = "2.0.2"
actix-web = "4"
actix-identity = "0.5"

argonautica = "0.2.0"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99"

diesel = { version = "2", features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
    "sqlite",
] }

dotenv = "0.15"
env_logger = "0.9"
futures = "0.3.12"
lazy_static = "1.4"
r2d2 = "0.8.8"
rust-argon2 = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sparkpost = "0.5"
uuid = { version = "1.2", features = ["serde", "v4"] }
time = "0.3"
log = "0.4.16"
jsonwebtoken = "8.1.0"
regex = "1.6.0"
validator = { version = "0.16", features = ["derive"] }
actix = "0.13.0"
failure = "0.1.8"
num_cpus = "1.14.0"
libreauth = "0.15.0"
