[package]
name = "lib-authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-identity = "0.5"
actix-service = "2.0.2"
actix-web = "4"
actix-web-httpauth = "0.6.0"
chrono = { version = "0.4.10", features = ["serde"] }
argonautica = "0.2.0"
derive_more = "0.99"
diesel = { version = "2", features = ["postgres","uuid", "r2d2", "chrono"] }
futures = "0.3.12"
lazy_static = "1.4"
log = "0.4.16"
serde = { version = "1", features = ["derive"] }
time = "0.3"
uuid = { version = "1.2", features = ["serde", "v4"] }
jsonwebtoken = "8.1.0"
failure = "0.1.8"
serde_json = "1.0"