[package]
name = "lib-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2", features = ["postgres","uuid", "r2d2", "chrono"] }
serde = { version = "1", features = ["derive"] }

[dependencies.bigdecimal]
version = "0.1.2"
features = ["serde"]